--- a/BethanysPieShopAdmin/appsettings.json
+++ b/BethanysPieShopAdmin/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.EntityFrameworkCore.Database.Command": "Information"
     }
   },
+  "ConnectionStrings": {
+    "BethanysPieShopDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BethanysPieShop_Admin2;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "AllowedHosts": "*"
 }
